# django_location_api_provider

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  manage.py  pylintrc  pyproject.toml
location_provider_api/: manage.py
location_provider_api/location_provider_api/: asgi.py  settings.py  urls.py  wsgi.py
