[project]
name = "django-location-api-provider"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco Lara",email = "flaracampora@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
